--- a/deno.json
+++ b/deno.json
@@ -5,7 +5,8 @@
     "netsaur:linreg": "deno run -A --unstable netsaur/regression/linear/main.ts",
     "lala:iris": "deno run -A --unstable classylala/classification/iris/main.ts",
     "lala:spam": "deno run -A --unstable classylala/classification/spam/main.ts",
-    "lala:linreg": "deno run -A --unstable classylala/regression/linear_ols/main.ts",
-    "lala:sgdreg": "deno run -A --unstable classylala/regression/linear_sgd/main.ts"
+    "lala:linreg_simple": "deno run -A --unstable classylala/regression/linear/1d_ols.ts",
+    "lala:linreg_gd": "deno run -A --unstable classylala/regression/linear/2d_gd.ts",
+    "lala:linreg_ols": "deno run -A --unstable classylala/regression/linear/2d_ols.ts"
   }
 }
